# gertrud

./: Cargo.toml  Dockerfile
drakentemmer/: Cargo.toml
drakentemmer/src/: category.rs  lib.rs
drakentemmer/src/category/: application.rs  client.rs
drakentemmer/src/category/client/: server_details.rs
drakentemmer/src/category/client/server_details/: response.rs
gertrud/: Cargo.toml
gertrud/src/: commands.rs  key_type.rs  main.rs  mongodb.rs  permissions.rs  response.rs  send_serialized.rs  standby.rs  state.rs  websocket.rs
gertrud/src/commands/: register_server_command.rs  send_request.rs  server_registrations.rs  settings.rs
gertrud/src/websocket/: messages.rs  websocket_handler.rs
gertrud/src/websocket/messages/: common.rs  message_impl.rs
gertrud/src/websocket/websocket_handler/: message_processor.rs  messages.rs
gertrud/src/websocket/websocket_handler/message_processor/: send_request.rs
gertrud/src/websocket/websocket_handler/messages/: incoming.rs
