[package]
name = "drakentemmer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-lock = "2.7.0"
async-trait = "0.1.68"
