[package]
name = "gertrud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drakentemmer = { path = "../drakentemmer" }

axum = { version = "0.6", features = ["ws", "headers"] }

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1", features = ["full"] }
futures = "0.3.28"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
nanoid = "0.4.0"

redis = { version = "0.23.0", features = [
    "tokio-comp",
    "json",
    "connection-manager",
] }
bitflags = "2.2.1"
eyre = "0.6.8"
dotenvy = "0.15.7"
dashmap = "5.4.0"
mongodb = "2.5.0"
